--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Gallery</title>
     <!-- custom css is goes here -->
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/scss/style.css" />
   </head>
   <body>
     <div class="container">
       <div class="product">
         <div class="small_images">
           <img src="./assets/images/burger01.jpg" alt="" onclick="show(this)" />
-          <img src="./assets/images/burger02.jpg" alt="" onclick="show(this)"/>
-          <img src="./assets/images/burger03.jpg" alt="" onclick="show(this)"/>
-          <img src="./assets/images/burger04.jpg" alt="" onclick="show(this)"/>
-          <img src="./assets/images/burger05.jpg" alt="" onclick="show(this)"/>
+          <img src="./assets/images/burger02.jpg" alt="" onclick="show(this)" />
+          <img src="./assets/images/burger03.jpg" alt="" onclick="show(this)" />
+          <img src="./assets/images/burger04.jpg" alt="" onclick="show(this)" />
+          <img src="./assets/images/burger05.jpg" alt="" onclick="show(this)" />
         </div>
         <div class="big_images">
           <img id="big_image" src="./assets/images/burger01.jpg" alt="" />
